# sgby-fmj-app

./: .gitignore  LICENSE  README.md
AppStore/fmj/: music.aac
Baye/baye_c/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Baye/baye_c/js/: .gitignore  CopyOfCMakeCache.txt  config.sh
Baye/baye_c/src/: CMakeLists.txt  FgtPkAi.c  Fight.c  FightSub.c  PublicFun.c  bind-objects.c  citycmd.c  citycmdb.c  citycmdd.c  citycmde.c  cityedit.c  comIn.c  comOut.c  con.py  config.c  datman.c  debug.c  gamEng.c  genver.py  infdeal.c  miniz.c  showface.c  speed.c  tactic.c  touch.c  touch.h  varma.c  version.c
Baye/baye_c/src/baye/: attribute.h  bind-objects.h  comm.h  compa.h  consdef.h  extern.h  fight.h  fsys.h  fundec.h  sharefun.h  speed.h
Baye/baye_c/src/inc/: STDLIB.H  dictsys.h
Baye/baye_c/src/platform/common/: bios.c  sys.c  timer.h
Baye/baye_c/src/platform/js/: exportjs.c  font24.1.bin.c  font24.2.bin.c  font24.3.bin.c  font24.4.bin.c  font24_ascii.1.c  font24_ascii.2.c  fsys.c  main.c  script.c  sem.c  timer.c
Baye/baye_c/src/platform/win/: game.c
Baye/baye_doc/: .buildinfo  _config.yml  genindex.html  index.html  objects.inv  search.html  searchindex.js
Baye/baye_doc/_sources/: index.txt
Baye/baye_doc/demos/: index.html
Baye/baye_doc/script/: index.html
Baye/baye_offline/: .gitignore  README.md  choose.html  index.html  libs.json  m.html  mt.html  package.json
Baye/baye_offline/css/: baye.css
Baye/baye_offline/js/: all-items-triple.js  baye.v2.js  baye.v2.wasm  baye.v2.wasm.map  bridge.js  examples.js  filter-bridge.js  game-init.js  lcd.js  lcd_mt.js  performance-monitor.js  redirect-guard.js  viewport-manager.js  vip-multiplier.js  wasm-loader.js
Baye/baye_offline/libs/: balance2.01.lib.about  dat-v2-mod.lib  dat-v2-mod.lib.about  harry.lib  harry.lib.about  harry1.lib  qmlw-XSHX.lib  yhf-mod.lib.about
Baye/baye_offline/mapeditor/: README.md  index.html
Flutter/: .gitignore  README.md  build_signed_apk.sh  pubspec.yaml
Flutter/android/: .gitignore  build.gradle.kts  local.properties  settings.gradle.kts
Flutter/android/app/: build.gradle.kts  proguard-rules.pro
Flutter/ios/Runner/: Info.plist
Flutter/ios/Runner.xcodeproj/: project.pbxproj
Flutter/lib/: main.dart  offline_package_manager.dart  web_view_page.dart
Flutter/lib/components/: common_card.dart  game_selector.dart  settings_cells.dart
Flutter/lib/models/: save_data.dart
Flutter/lib/pages/: enhanced_about_page.dart  feedback_page.dart  purchase_page.dart  save_detail_page.dart  save_list_page.dart
Flutter/lib/services/: enhanced_snackbar_service.dart  enhanced_theme_service.dart  feedback_service.dart  haptic_feedback_service.dart  iap_code_service.dart  iap_manager.dart  orientation_service.dart
Flutter/lib/utils/: app_config.dart  game_switcher.dart  js_bridge.dart  log_utils.dart  multiplier_settings.dart  platform_utils.dart  save_manager.dart  secure_vip_storage.dart  user_id_manager.dart  version_checker.dart
Flutter/linux/: CMakeLists.txt
Flutter/test/: widget_test.dart
Flutter/web/: index.html  manifest.json
Flutter/windows/: CMakeLists.txt
Fmj/fmj_c_engine/: FONT.4988  Resource.h  debug.c  debug.h  dictsys.h  engine.c  engine.h  fmj-engine.aps  fmj-engine.c  fmj-engine.h  fmj-engine.rc  fmj-engine.sln  fmj-engine.vcxproj  fmj-engine.vcxproj.filters  font.c  font.h  framework.h  keytable.h  middle.c  middle.h  readme.txt  词典内存布局.txt
Fmj/fmj_kt/: .gitignore  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
Fmj/fmj_offline/: README.md  index.html
iOS/: Podfile  README.md  parse_performance_data.py
iOS/HDBayeApp/: AppDelegate.swift  HDBaseViewController.swift  SceneDelegate.swift
iOS/HDBayeApp.xcodeproj/: project.pbxproj  project.pbxproj.backup
iOS/HDBayeApp.xcworkspace/: contents.xcworkspacedata
iOS/项目资料/: 项目描述.txt
(+713 files in other folders)
